[package]
name = "database"
version = "1.0.0"
edition = "2021"


[features]
default = []
full = ["mssql", "oracle", "postgres", "sqlite"]
mssql = ["dep:tiberius", "dep:tokio", "dep:tokio-util", "dep:thiserror"]
oracle = ["dep:oracle", "dep:thiserror"]
postgres = [
    "dep:chrono",
    "dep:deadpool-postgres",
    "dep:futures-util",
    "dep:native-tls",
    "dep:postgres",
    "dep:postgres-types",
    "dep:postgres-native-tls",
    "dep:tokio-postgres",
    "dep:tokio",
    "dep:tokio-util",
    "dep:thiserror"
]
sqlite = ["dep:rusqlite", "dep:thiserror"]

[dependencies]
# Common dependencies
thiserror = { version = "1.0.60", optional = true }
tokio = { version = "1.37.0", features = ["net"], optional = true }
tokio-util = { version = "0.7.11", features = ["compat"], optional = true }

# MSSQL dependencies
tiberius = { version = "0.12.2", optional = true }

# Oracle dependencies
oracle = { version = "0.5.7", optional = true }

# Postgres dependencies
chrono = { version = "0.4.38", optional = true }
deadpool-postgres = { version = "0.13.2", optional = true }
futures-util = { version = "0.3.30", optional = true }
native-tls = { version = "0.2.11", optional = true }
postgres = { version = "0.19.7", optional = true }
postgres-types = { version ="0.2.6", features = ["with-chrono-0_4"], optional = true }
postgres-native-tls = { version = "0.5.0", optional = true }
tokio-postgres = { version = "0.7.10", optional = true }

# SQLite dependencies
rusqlite = { version = "0.31.0", optional = true }
